--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/senorprogrammer/wtf">Senorprogrammer/wtf: A personal information dashboard for your terminal</a>
+                                    <a href="https://www.techdirt.com/articles/20180528/21433139932/eu-parliaments-own-website-violates-gdpr.shtml">EU Parliament's Own Website Violates the GDPR</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195618">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194064">
                                         
-                                            2 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527767523"
+                                            href="https://news.ycombinator.com/user?id=vixen99">vixen99</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527742780"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     7 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527771003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527771604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
