--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -183,17 +183,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Anatomy of an online misinformation network</a>
+                                    <a href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Our machine learning and NLP journey</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17173593">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17181570">
                                         
-                                            102 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527528267"
+                                            href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527617167"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     111 points
                                 </span>
@@ -207,19 +207,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.quantamagazine.org/the-math-of-causation-puzzle-20180530/">The Slippery Math of Causation</a>
+                                    <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Anatomy of an online misinformation network</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17189673">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17173593">
                                         
-                                            19 comments
+                                            102 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dfee">dfee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527701417"
+                                            href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527528267"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    110 points
+                                    111 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527771003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527771604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
