--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -161,6 +161,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://angel.co/pathrise/jobs">Pathrise (YC W18) is hiring engineers interested in mentorship</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17150280">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=kevintxwu">kevintxwu</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527216808"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://agilemd.workable.com/jobs/729631">AgileMD (YC S11) Is Hiring a Senior Full-Stack Engineer</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -290,7 +314,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527776404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527777004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
