--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -315,7 +315,7 @@
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527705455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    411 points
+                                    412 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://diamondssuck.com/">Diamonds Suck (2006)</a>
+                                    <a href="https://www.johnwdefeo.com/articles/why-i-write-letters-to-ceos">I Write Letters to CEOs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186457">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17192926">
                                         
-                                            213 comments
+                                            139 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527675260"
+                                            href="https://news.ycombinator.com/user?id=henryjones">henryjones</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527724639"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    383 points
+                                    384 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527780604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527781204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
