--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -189,13 +189,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17189905">
                                         
-                                            546 comments
+                                            548 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527702803"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    1276 points
+                                    1279 points
                                 </span>
                             </td>
                         </tr>
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=wei_jok">wei_jok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527641541"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    953 points
+                                    954 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527613849"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    733 points
+                                    734 points
                                 </span>
                             </td>
                         </tr>
@@ -459,7 +459,7 @@
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527705455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    411 points
+                                    412 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://diamondssuck.com/">Diamonds Suck (2006)</a>
+                                    <a href="https://www.johnwdefeo.com/articles/why-i-write-letters-to-ceos">I Write Letters to CEOs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186457">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17192926">
                                         
-                                            213 comments
+                                            139 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527675260"
+                                            href="https://news.ycombinator.com/user?id=henryjones">henryjones</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527724639"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    383 points
+                                    384 points
                                 </span>
                             </td>
                         </tr>
@@ -574,7 +574,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527780604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527781204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
