--- a/jobs/index.html
+++ b/jobs/index.html
@@ -67,20 +67,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173051" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.crypto51.app">Cost of a 51% Attack on Popular Cryptocurrencies</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17180686" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://recursive.recipes/">Recursive Recipes – directions to make food from scratch</a>
@@ -126,6 +112,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17178302" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://www.jqbx.fm">JQBX – Social Listening Web/Mobile App</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17181315" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://github.com/lucperkins/colossus">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
                                 </span>
                             </td>
                         </tr>
@@ -551,7 +551,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527781805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527782403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
