--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://thesoundingline.com/map-of-the-day-us-states-renamed-for-countries-with-similar-gdps/">Map: US States Renamed as Countries with Similar GDPs</a>
+                                    <a href="https://research.swtch.com/vgo-eng">What is Software Engineering?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195951">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17187715">
                                         
-                                            83 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527772018"
+                                            href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527689204"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    108 points
+                                    109 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527783004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527783604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
