--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.ably.io/this-android-vm-bug-causes-interned-strings-to-be-handled-incorrectly-1e206283bbb4">This Android VM bug causes interned strings to be handled incorrectly</a>
+                                    <a href="https://elie.net/blog/ai/attacks-against-machine-learning-an-overview">Attacks against machine learning – an overview</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195203">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17197288">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=srushtika">srushtika</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527761441"
+                                            href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527782248"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     6 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527784204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527784804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
