--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -375,19 +375,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://miguelgfierro.com/blog/2018/top-mistakes-and-learnings-from-my-startup-postmortem-samsamia/">Top Mistakes and Learnings from My Startup: Postmortem Samsamia</a>
+                                    <a href="https://work.qz.com/1289727/vermont-will-pay-you-10000-to-move-there-and-work-remotely/">Vermont will cover $10K of expenses for people who move there and work remotely</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17169080">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196507">
                                         
-                                            71 comments
+                                            122 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527454855"
+                                            href="https://news.ycombinator.com/user?id=swlkr">swlkr</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527776611"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    184 points
+                                    186 points
                                 </span>
                             </td>
                         </tr>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://99percentinvisible.org/episode/curb-cuts/">Curb Cuts</a>
+                                    <a href="https://miguelgfierro.com/blog/2018/top-mistakes-and-learnings-from-my-startup-postmortem-samsamia/">Top Mistakes and Learnings from My Startup: Postmortem Samsamia</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17163363">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17169080">
                                         
-                                            55 comments
+                                            71 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=GW150914">GW150914</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527357405"
+                                            href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527454855"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     184 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527785405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527786004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
