--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -471,19 +471,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.fastcompany.com/40579141/microsoft-is-now-worth-more-than-google">Microsoft is now worth more than Google</a>
+                                    <a href="https://www.fastcompany.com/40579141/microsoft-is-now-worth-more-than-google">Microsoft is now worth more than Alphabet</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17196880">
                                         
-                                            82 comments
+                                            90 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Bhilai">Bhilai</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527779516"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    133 points
+                                    138 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527786004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527786604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
