--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -429,13 +429,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17195951">
                                         
-                                            115 comments
+                                            117 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527772018"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    140 points
+                                    141 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.youtube.com/watch?v=Z4oYSByyRak">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17184407">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
                                         
-                                            70 comments
+                                            126 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527645250"
+                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779559"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    133 points
+                                    134 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527788404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527789003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
