--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://work.qz.com/1289727/vermont-will-pay-you-10000-to-move-there-and-work-remotely/">Vermont will cover $10K of expenses for people who move there and work remotely</a>
+                                    <a href="https://eklitzke.org/lobotomizing-gnome">Lobotomizing Gnome</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196507">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17185569">
                                         
-                                            147 comments
+                                            217 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=swlkr">swlkr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527776611"
+                                            href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527662318"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    221 points
+                                    222 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527789003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527789603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
