--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=kbal11">kbal11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527699700"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    204 points
+                                    205 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/cervus-v/cervus">Cervus: A WebAssembly subsystem for Linux</a>
+                                    <a href="http://db.cs.berkeley.edu/papers/fntdb07-architecture.pdf">Architecture of a Database System (2007) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17184410">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190947">
                                         
-                                            57 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527645267"
+                                            href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527708678"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     198 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527792003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527792603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
