--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -195,7 +195,7 @@
                                             href="https://news.ycombinator.com/user?id=swlkr">swlkr</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527776611"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    243 points
+                                    245 points
                                 </span>
                             </td>
                         </tr>
@@ -315,7 +315,7 @@
                                             href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527717287"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    216 points
                                 </span>
                             </td>
                         </tr>
@@ -411,7 +411,7 @@
                                             href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708678"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    199 points
+                                    201 points
                                 </span>
                             </td>
                         </tr>
@@ -501,13 +501,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17196880">
                                         
-                                            153 comments
+                                            155 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Bhilai">Bhilai</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527779516"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    193 points
+                                    194 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://mtlynch.io/since-quitting/">What I’ve Been Doing Since Quitting My Job</a>
+                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
                                         
-                                            113 comments
+                                            191 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527680549"
+                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779559"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     189 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527795604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527796203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
