--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/cervus-v/cervus">Cervus: A WebAssembly subsystem for Linux</a>
+                                    <a href="https://www.evonide.com/side-channel-attacking-browsers-through-css3-features/">Side-channel attacking browsers through CSS3 features</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17184410">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17197944">
                                         
-                                            57 comments
+                                            43 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527645267"
+                                            href="https://news.ycombinator.com/user?id=drchiu">drchiu</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527785938"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     198 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527798003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527798604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
