--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://landgreen.github.io/physics/index.html">High school physics course notes, with JavaScript simulations</a>
+                                    <a href="https://github.com/ambv/black">Black: An uncompromising Python code formatter</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17178031">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17151813">
                                         
-                                            64 comments
+                                            255 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527592246"
+                                            href="https://news.ycombinator.com/user?id=kumaranvpl">kumaranvpl</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527239257"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    443 points
+                                    444 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527806404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527807004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
