--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/ImageOptim/gifski/releases/tag/0.8.3">Windows gifski.exe with a digital signature</a>
+                                    <a href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Our machine learning and NLP journey</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195758">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17181570">
                                         
-                                            47 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ronjouch">ronjouch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527769543"
+                                            href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527617167"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    111 points
+                                    113 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    109 points
+                                    110 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527815405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527816003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
