--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://qz.com/96206/google-admits-those-infamous-brainteasers-were-completely-useless-for-hiring/">Google admits brainteasers were useless for hiring (2013)</a>
+                                    <a href="https://scholar.harvard.edu/fryer/publications/are-high-quality-schools-enough-increase-achievement-among-poor-evidence-harlem-c">High-quality schools can increase academic achievement among the poor (2010)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196974">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194167">
                                         
-                                            128 comments
+                                            213 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gk1">gk1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527780181"
+                                            href="https://news.ycombinator.com/user?id=MaysonL">MaysonL</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527744363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    168 points
+                                    170 points
                                 </span>
                             </td>
                         </tr>
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527776977"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    167 points
+                                    169 points
                                 </span>
                             </td>
                         </tr>
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=alex_young">alex_young</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527778073"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    159 points
+                                    161 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527817804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527818403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
