--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-05-31/america-s-teens-are-choosing-youtube-over-facebook">America’s Teens Are Choosing YouTube Over Facebook</a>
+                                    <a href="https://scholar.harvard.edu/fryer/publications/are-high-quality-schools-enough-increase-achievement-among-poor-evidence-harlem-c">High-quality schools can increase academic achievement among the poor (2010)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17200996">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194167">
                                         
-                                            122 comments
+                                            213 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527806880"
+                                            href="https://news.ycombinator.com/user?id=MaysonL">MaysonL</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527744363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    168 points
+                                    170 points
                                 </span>
                             </td>
                         </tr>
@@ -213,13 +213,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17196704">
                                         
-                                            96 comments
+                                            97 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alex_young">alex_young</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527778073"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    165 points
+                                    166 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527822604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527823205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
