--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
+                                    <a href="https://work.qz.com/1289727/vermont-will-pay-you-10000-to-move-there-and-work-remotely/">Vermont will cover $10K of expenses for people who move there and work remotely</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196507">
                                         
-                                            253 comments
+                                            183 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527779559"
+                                            href="https://news.ycombinator.com/user?id=swlkr">swlkr</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527776611"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    261 points
+                                    262 points
                                 </span>
                             </td>
                         </tr>
@@ -309,13 +309,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17197092">
                                         
-                                            135 comments
+                                            136 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gringoDan">gringoDan</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527780943"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    252 points
+                                    253 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527822604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527823205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
