--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.cs.cornell.edu/home/kleinber/networks-book/networks-book-ch18.pdf">Power Laws and Rich-Get-Richer Phenomena (2010) [pdf]</a>
+                                    <a href="https://www.eetimes.com/document.asp?doc_id=1333332&_mc=RSS_EET_EDT">Footsteps, Pressure Sensors, and AI: The Next Step in Airport Security</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199766">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194351">
                                         
-                                            13 comments
+                                            73 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=marojejian">marojejian</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527797535"
+                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527747946"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    80 points
+                                    81 points
                                 </span>
                             </td>
                         </tr>
@@ -363,7 +363,7 @@
                                             href="https://news.ycombinator.com/user?id=porsager">porsager</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527796909"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    62 points
+                                    63 points
                                 </span>
                             </td>
                         </tr>
@@ -459,7 +459,7 @@
                                             href="https://news.ycombinator.com/user?id=hippich">hippich</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527789575"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    58 points
+                                    59 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527823804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527824405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
