--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -213,7 +213,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17196704">
                                         
-                                            98 comments
+                                            100 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alex_young">alex_young</a></strong> &nbsp;•&nbsp;
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://en.wikipedia.org/wiki/Three_sided_football">Three-sided Football</a>
+                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17177668">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
                                         
-                                            58 comments
+                                            51 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527586272"
+                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     144 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527825005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527825604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
